# kworkapi

./: .env.example  .gitignore  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: ci.yml
api/: _serialize.py  deps.py  main.py
api/routers/: account.py  auth.py  catalog.py  exchange.py  files.py  kworks.py  messages.py  orders.py  projects.py  search.py  users.py
docs/: 01-reverse-engineering.md  02-kwork-api-reference.md  03-endpoints.md  04-architecture.md  05-roadmap.md  07-usage.md  README.md
kworkapi/: __init__.py  auth.py  client.py  transport.py
kworkapi/models/: __init__.py  catalog.py  common.py  dialog.py  exchange.py  kwork.py  user.py
kworkapi/resources/: account.py  base.py  catalog.py  exchange.py  files.py  kworks.py  messages.py  misc.py  orders.py  portfolio.py  search.py  tracks.py  users.py
research/: endpoints.md  extract_endpoints.py
tests/: test_actions.py  test_api.py  test_captcha.py  test_extra.py  test_live.py  test_orders.py  test_resources.py  test_transport.py
