[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "kworkapi"
version = "0.6.0"
description = "Неофициальная async-библиотека и FastAPI-сервис над приватным API kwork.ru"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "magomedov-dev", email = "magomedov.dev@proton.me" }]
keywords = ["kwork", "api", "client", "async", "httpx", "pydantic", "fastapi", "freelance"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3 :: Only",
    "Framework :: AsyncIO",
    "Framework :: FastAPI",
    "Framework :: Pydantic",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Internet :: WWW/HTTP",
    "Typing :: Typed",
    "Operating System :: OS Independent",
]
dependencies = [
    "httpx>=0.27",
    "pydantic>=2.7",
]

[project.urls]
Homepage = "https://github.com/magomedov-dev/kworkapi"
Repository = "https://github.com/magomedov-dev/kworkapi"
Changelog = "https://github.com/magomedov-dev/kworkapi/blob/main/CHANGELOG.md"
Documentation = "https://github.com/magomedov-dev/kworkapi/blob/main/docs/07-usage.md"
Issues = "https://github.com/magomedov-dev/kworkapi/issues"

[project.optional-dependencies]
server = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "python-multipart>=0.0.9",
]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5",
    "respx>=0.21",
    "ruff>=0.5",
    "mypy>=1.10",
    "pyright>=1.1.350",
]

[tool.hatch.build.targets.wheel]
packages = ["kworkapi"]

[tool.hatch.build.targets.sdist]
include = ["kworkapi", "README.md", "CHANGELOG.md", "LICENSE", "docs"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
warn_unused_ignores = false
check_untyped_defs = true
# проверяем библиотеку строго, тесты/сервис — мягко
exclude = ["tests/", "build/", "dist/"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
filterwarnings = ["ignore::DeprecationWarning"]

[tool.pyright]
include = ["kworkapi"]
venvPath = "."
venv = ".venv"
pythonVersion = "3.11"
typeCheckingMode = "strict"
reportMissingModuleSource = false
